# client

./: CMakeLists.txt  main.cpp
src/: ConnectionInfo.h  DatabaseManager.cpp  DatabaseManager.h  MainWindow.cpp  MainWindow.h
src/client/: AuthorizePage.cpp  AuthorizePage.h  ChatPage.cpp  ChatPage.h  ContactListItem.cpp  ContactListItem.h  ContactsPage.cpp  ContactsPage.h  NewsletterDialog.cpp  NewsletterDialog.h  RegistrationDialog.cpp  RegistrationDialog.h
